feature: add segment.io controller for batch messages

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ service:
   description: @project.description@
   version: @project.version@
 
+# Logging
+logging:
+  level:
+    root: INFO
+    service: TRACE
+
+# Outgoing Services
